--- a/src/app/components/items_admin/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/items_admin/admin-navbar/admin-navbar.component.html
@@ -44,13 +44,17 @@
                         <a class="dropdown-item" href="javascript:void(0)">Another One</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="material-icons">person</i>
                         <p>
                             <span class="d-lg-none d-md-block">Account</span>
                         </p>
                     </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuUser">
+                        <a class="dropdown-item" href="javascript:void(0)" (click)="changeaccount()">Cambiar de cuenta</a>
+                        <a class="dropdown-item" href="javascript:void(0)" (click)="logout()">Salir</a>
+                    </div>
                 </li>
             </ul>
         </div>
