--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -10,7 +10,58 @@
                     <div class="card-body">
                         <!-- Formulario aqui -->
                         <form>
-                            
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="nombres">Nombres</label>
+                                    <div class="borde">{{user.nombres}}</div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="Apellidos">Apellidos</label>
+                                    <div class="borde">{{user.apellidos}}</div>
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="userName">Nombre de usuario</label>
+                                    <div class="borde">{{user.userName}}</div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="userName">Email</label>
+                                    <div class="borde">{{user.email}}</div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="password">Password</label>
+                                    <div class="borde">**********</div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="rol">Rol</label>
+                                    <div class="borde">{{user.rol}}</div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-md-12">
+                                    <div class="d-flex justify-content-center">
+                                      <img src="user.image" alt="" height="80" width="100">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="genero">Genero</label>
+                                    <div class="borde">{{user.genero}}</div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="fecha">Fecha Nacimiento</label>
+                                    <div class="borde">dd/aa/aaaa</div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="telefono">Telefono</label>
+                                    <div class="borde">{{user.telefono}}</div>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
