--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,1 +1,23 @@
-<p>reset-password works!</p>
+<div class="container">
+    <div class="d-flex justify-content-center h-100">
+        <div class="card">
+            <div class="card-header">
+                <h3 class="d-flex justify-content-start">Reset Password</h3>
+            </div>
+            <div class="card-body">
+                <form name="form">
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-unlock-alt"></i></span>
+                        </div>
+                        <input name="password" type="password" class="form-control" placeholder="password*"
+                            formControlName="password" />
+                    </div>
+                    <div class="input-group form-group">
+                        <button class="form-control color-button" type="submit">Done</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
