--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -38,7 +38,7 @@
           <a routerLink="/user/register">Sign Up</a>
         </div>
         <div class="d-flex justify-content-center">
-          <a href="#" class="color-text">Forgot password?</a>
+          <a class="color-text" routerLink="/forgot-password">Forgot password?</a>
         </div>
       </div>
     </div>
