--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,1 +1,22 @@
-<p>forgot-password works!</p>
+<div class="container">
+    <div class="d-flex justify-content-center h-100">
+        <div class="card">
+            <div class="card-header">
+                <h3 class="d-flex justify-content-start">Forgot Password</h3>
+            </div>
+            <div class="card-body">
+                <form name="form">
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
+                        <input name="email" type="email" class="form-control" placeholder="email*">
+                    </div>
+                    <div class="input-group form-group">
+                        <button class="form-control color-button" type="submit">LOGIN</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
