--- a/src/app/components/formsparts/user-create/user-create.component.html
+++ b/src/app/components/formsparts/user-create/user-create.component.html
@@ -166,7 +166,7 @@
                   </div>
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="estado">Estado</label>
+                  <label for="estado">Estado(Activo/Inactivo)</label>
                   <div>
                     <input type="checkbox" formControlName="estado">
                   </div>
