--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -9,11 +9,34 @@
                             <p class="card-category"> Informacion Usuarios</p>
                         </div>
                         <!--
-                        <button class="ordena btn btn-success float-right mb-3" type="button" data-toggle="modal"
+                            <button class="ordena btn btn-success float-right mb-3" type="button" data-toggle="modal"
                             data-target="#modalUser">Nuevo</button>
-                             -->
+                        -->
                         <a routerLink="/admin/create-user" routerLinkActive="router-link-active"
-                            class="ordena btn btn-success float-right mb-3">Nuevo</a>
+                        class="ordena btn btn-success float-right mb-3">Nuevo</a>
+                        <input type="text" value="" class=" float-md-right mr-3 mt-2" placeholder="Search...">
+                        <div class="dropdown ordena float-md-right mr-3">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  SHOW ROLES
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                  <a class="dropdown-item" href="#">Todos</a>
+                                  <a class="dropdown-item" href="#">Administradores</a>
+                                  <a class="dropdown-item" href="#">Propietarios</a>
+                                  <a class="dropdown-item" href="#">Colaboradores</a>
+                                  <a class="dropdown-item" href="#">Clientes</a>
+                                </div>
+                        </div>
+                            <div class="dropdown ordena float-md-right mr-3">
+                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                      10
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                      <a class="dropdown-item" href="#">25</a>
+                                      <a class="dropdown-item" href="#">50</a>
+                                      <a class="dropdown-item" href="#">100</a>
+                                    </div>
+                            </div>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
