--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -42,7 +42,7 @@
                             <div class="form-row">
                                 <div class="col-md-12">
                                     <div class="d-flex justify-content-center">
-                                      <img src="user.image" alt="" height="80" width="100">
+                                      <img src="{{user.imagen}}" alt="" height="80" width="100">
                                     </div>
                                 </div>
                             </div>
@@ -53,7 +53,7 @@
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="fecha">Fecha Nacimiento</label>
-                                    <div class="borde">dd/aa/aaaa</div>
+                                    <div class="borde">{{user.fechaNacimiento}}</div>
                                 </div>
                             </div>
                             <div class="form-row">
@@ -61,6 +61,12 @@
                                     <label for="telefono">Telefono</label>
                                     <div class="borde">{{user.telefono}}</div>
                                 </div>
+                                <div class="form-group col-md-6">
+                                    <label for="estado">Estado(Activo/Inactivo)</label>
+                                    <div *ngIf="user.estado">
+                                        Activo
+                                    </div>
+                                  </div>
                             </div>
                         </form>
                     </div>
@@ -71,7 +77,7 @@
                 <div class="card card-profile">
                     <div class="card-avatar">
                         <a href="javascript:void(0)">
-                            <img class="img" src="{{user.imagen}}" />
+                            <img class="img" src="{{user.imagen}}"/>
                         </a>
                     </div>
                     <div class="card-body">
