--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -15,14 +15,24 @@
             <div class="input-group-prepend">
               <span class="input-group-text"><i class="fas fa-user"></i></span>
             </div>
-            <input name="email" type="email" class="form-control" placeholder="email*" formControlName="email">
+            <input name="email" type="email" class="form-control" placeholder="email@example.com" formControlName="email"
+            [ngClass]="{ 'is-invalid': (submitted && formControls.email.errors && formControls.email.errors.required) || (formControls.email.errors?.required && formControls.email.touched && !submitted) }">
+            <div class="error-message d-flex" *ngIf="(submitted && formControls.email.errors && formControls.email.errors.required) || (formControls.email.errors?.required && formControls.email.touched && !submitted)">
+                Email es requerido
+            </div>
+            <div class="error-message d-flex" *ngIf="(formControls.email.errors?.email)">
+                Email no valido
+            </div>
           </div>
           <div class="input-group form-group">
             <div class="input-group-prepend">
               <span class="input-group-text"><i class="fas fa-unlock-alt"></i></span>
             </div>
-            <input name="password" type="password" class="form-control" placeholder="password*"
-              formControlName="password" />
+            <input name="password" type="password" class="form-control" placeholder="password" formControlName="password"
+            [ngClass]="{ 'is-invalid': (submitted && formControls.password.errors && formControls.password.errors.required) || (formControls.password.errors?.required && formControls.password.touched && !submitted) }">
+            <div class="error-message d-flex" *ngIf="(submitted && formControls.password.errors && formControls.password.errors.required) || (formControls.password.errors?.required && formControls.password.touched && !submitted)">
+                Password es requerido
+            </div>
           </div>
           <div class="input-group form-group row aling-items-center remember">
             <input name="rememberMe" type="checkbox" formControlName="rememberMe"> Remember Me
