--- a/src/app/components/items_admin/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/items_admin/admin-navbar/admin-navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute fixed-top">
     <div class="container-fluid">
         <div class="navbar-wrapper">
-          <a class="navbar-brand" href="javascript:void(0)">{{getTitle()}}</a>
+            <a class="navbar-brand" href="javascript:void(0)">{{getTitle()}}</a>
         </div>
         <button mat-raised-button class="navbar-toggler" type="button" (click)="sidebarToggle()">
             <span class="sr-only">Toggle navigation</span>
@@ -53,6 +53,7 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuUser">
                         <a class="dropdown-item" href="javascript:void(0)" (click)="changeaccount()">Cambiar de cuenta</a>
+                        <a class="dropdown-item" href="javascript:void(0)" (click)="home_web()">Home Web</a>
                         <a class="dropdown-item" href="javascript:void(0)" (click)="logout()">Salir</a>
                     </div>
                 </li>
