--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -27,6 +27,7 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" (click)="changeaccount()">Cambiar de cuenta</a>
                     <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" (click)="dashboard()">Dashboard</a>
                     <a class="dropdown-item" (click)="logout()">Logout</a>
                 </div>
             </div>
