--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -39,6 +39,9 @@
                         <button class="form-control color-button" type="submit">LOGIN</button>
                     </div>
                 </form>
+                <div class="error-message d-flex justify-content-center">
+                       <h4> {{loginError}}</h4>
+                </div>
             </div>
             <div class="card-footer">
                 <div class="d-flex justify-content-center links">
